Add more author stuff, footer link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,7 @@
             {% if site.email %}
             <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {% endif %}
+            <li><span class="icon">{% include icon-github.svg %}</span> <a href="https://github.com/makyo/salsa">PRs Welcome</a></li>
         </ul>
       </div>
 
