--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,8 @@
             {% if site.email %}
             <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {% endif %}
-            <li><span class="icon">{% include icon-github.svg %}</span> <a href="https://github.com/makyo/salsa">PRs Welcome</a></li>
+            <li>{% include icon-twitter.html username="salsa_fyi" %}</li>
+            <li>{% include icon-github.html repo="makyo/salsa" %}</li>
         </ul>
       </div>
 
@@ -25,7 +26,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
+        <p><img src="/assets/salsa-logo.png" style="float: left; height: 75px" />{{ site.description | escape }}</p>
       </div>
     </div>
 
