--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p><img src="/assets/salsa-logo.png" style="float: left; height: 75px" />{{ site.description | escape }}</p>
+        <p><img src="/assets/salsa-logo.png" style="float: left; height: 75px; border: 2px solid #424242; margin-right: 0.5em;" />{{ site.description | escape }}</p>
       </div>
     </div>
 
