--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+
+
+<!-- logotype
+<h1 class="logo" style="font-size: 100px; font-weight: 300; letter-spacing: -1px; line-height: 80px">SAL<br>SA<br>&nbsp;</h1>
+-->
+
 <div class="home">
 
   <h1 class="page-heading">Posts</h1>
