Add logotype to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
+    <a class="site-title" href="{{ "/" | relative_url}}"><img src="/assets/salsa-logo.png" style="float: left; height: 50px; border: 2px solid #424242; margin: 1px 0.5em 0 0;" />{{ site.title | escape }}</a>
 
     <nav class="site-nav">
       <span class="menu-icon">
