--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -236,6 +236,11 @@
   font-size: 24px;
 }
 
+.addthis_inline_share_toolbox {
+    display: inline-block;
+    vertical-align: middle;
+}
+
 
 
 /**
