--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,4 +29,4 @@
 
 </footer>
 
-<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58f10382db68000f"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58f10382db68000f"></script>
