--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,4 +15,6 @@ layout: default
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
+
+  <p>Are you a SALSAzen? Are you intrested in contributing? Check out the <a href="/about">about page</a> for more info!</p>
 </article>
