Cat posted a thing.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,6 @@ layout: default
   {% endif %}
 
   <hr />
-  
-  <p>Are you a SALSAzen? Are you intrested in contributing? Check out the <a href="/about">about page</a> for more info!</p>
+
+  <p class="call">Are you a SALSAzen? Are you intrested in contributing? Check out the <a href="/about">about page</a> for more info!</p>
 </article>
