--- a/assets/main.scss
+++ b/assets/main.scss
@@ -88,3 +88,11 @@ dl {
         padding-left: 2em;
     }
 }
+
+blockquote.pull {
+    font-size: 20pt;
+    font-weight: lighter;
+    letter-spacing: 1pt;
+    border-left: none;
+    color: #222;
+}
