--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400');
+
 // Define defaults for each variable.
 
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+//$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$title-font-family: "Lato", sans-serif !default;
+$base-font-family: $title-font-family;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
+$title-font-weight: 300;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
