--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -11,8 +11,9 @@
 }
 
 .site-title {
+  font-family: $title-font-family;
   font-size: 26px;
-  font-weight: 300;
+  font-weight: $title-font-weight;
   line-height: 56px;
   letter-spacing: -1px;
   margin-bottom: 0;
@@ -30,6 +31,16 @@
   &:visited {
     color: $grey-color-dark;
   }
+}
+@include media-query($on-palm) {
+    .site-title {
+        float: none;
+        display: block;
+
+        img {
+            display: block;
+        }
+    }
 }
 
 .site-nav {
