--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,9 @@
       </span>
 
       <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title }}</a>
-          {% endif %}
-        {% endfor %}
+        <a class="page-link" href="/about">About</a>
+        <a class="page-link" href="/who">Who</a>
+        <a class="page-link" href="/weekly">SALSA Weekly</a>
       </div>
     </nav>
 
